# transformer-from-scratch

./: .gitignore  README.md  backup_code.txt  config.py  dataset.py  model.py  pyproject.toml  train.py
notebook/: testing.ipynb
