[project]
name = "transformer-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.5.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "plotly>=6.5.0",
    "tensorboard>=2.20.0",
    "tokenizers>=0.22.2",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
]
